# project_boilerplate

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
domains/accounts/: apps.py  models.py  services.py
domains/accounts/migrations/: 0001_initial.py
project/: asgi.py  settings.py  urls.py  wsgi.py
web/api/: apps.py  urls.py
web/api/v1/: accounts.py  auth_bearer.py
