[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Mafinar Khan <mafinar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
python-dotenv = "^0.15.0"
psycopg2 = "^2.8.6"
django-extensions = "^3.1.1"
Werkzeug = "^1.0.1"
django-debug-toolbar = "^3.2"
django-ninja = "^0.11.0"
ujson = "^4.0.2"
pytest = "^6.2.2"
pytest-django = "^4.1.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pre-commit = "^2.11.1"
isort = "^5.7.0"
flake8 = "^3.8.4"
ipython = "^7.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
